# interfaces

./: .dockerignore  .gitignore  Dockerfile  compose.yaml  eksperyment.py  pyproject.toml  pyvenv.cfg  serve.py
Include/config/: CfgParserJson.py  conenction.json
Include/controllers/: DigitalDIscoveryMultiplex.py  ExampleController.py
Include/factory/: tester_serializer.py
Include/interface/magistrale/: gpio.py
Include/interfaces/: gpio.py  i2c.py  spi.py
Include/interfaces/config/: cfg_parser.py
Include/interfaces/magistrale/: uart.py
Include/manager/: tester_manager.py
config/: conenction.json  multiplex-ditigital-discovery.json
controllers/: example_ controller.py
factory/: tester_serializer.py
include/config/: conenction.json
include/controllers/: DigitalDIscoveryMultiplex.py
include/factory/: ControllerParser.py  tester_serializer.py
include/interface/magistrale/: spi.py
include/manager/: tester_manager.py
interfaces/: can.py  config_parser.py  gpio.py  i2c.py  spi.py  uart.py
src/app/: app.py
src/app/routes/: can.py  dut.py  gpio.py  i2c.py  qspi.py  spi.py  uart.py
src/config/: conenction.json  connections-inverted.json  demo-setup.json  fpga-setup.json
src/controllers/: __init__.py  base_controller.py  digital_discovery_multiplex.py  digital_discovery_multiplex_controller.py  example_controller.py  ssh_controller.py
src/factory/: controllers_factory.py  controllers_inverted_factory.py
src/interface/: base_interface.py  can.py  gpio.py  i2c.py  qspi.py  spi.py  ssh.py  uart.py
src/manager/: tester_manager.py
(+7 files in other folders)
