[tool.poetry]
name = "interfaces"
version = "0.1.0"
description = ""
authors = ["Szymon Walczak <szymon.walczak06@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
paramiko = "^3.3.1"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
